<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/primary_color"
    android:padding="20dp"
    tools:context=".HomeActivity">


    <ImageView
        android:id="@+id/imageView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="64dp"
        android:layout_marginEnd="20dp"
        android:src="@drawable/logo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.125"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"></ImageView>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_signIn_Username"
        android:layout_width="0dp"

        android:layout_height="wrap_content"
        android:layout_marginTop="227dp"
        android:width="320dp"
        android:height="60dp"
        android:background="@drawable/roundedbtnshape"
        android:drawableLeft="@drawable/login_svgrepo_com"
        android:elevation="15dp"
        android:fontFamily="@font/nunito"
        android:text="@string/user_signIn"
        android:textColor="@color/black"
        android:textSize="16sp"
        android:textStyle="bold"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.75"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <View
        android:id="@+id/linebetween"
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:background="@color/black"
        android:layout_marginTop="11sp"
        android:layout_marginBottom="11sp"
        app:layout_constraintBottom_toTopOf="@+id/signin_phonenum"
        app:layout_constraintTop_toBottomOf="@+id/btn_signIn_Username"
        tools:layout_editor_absoluteX="20dp"></View>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/signin_phonenum"
        android:layout_width="0dp"

        android:layout_height="wrap_content"
        android:width="320dp"
        android:height="60dp"
        android:background="@drawable/roundedbtnshape"
        android:drawableLeft="@drawable/phoneicon"
        android:drawableTint="@color/black"
        android:drawablePadding="20dp"
        android:elevation="15dp"
        android:fontFamily="@font/nunito"
        android:text="@string/user_phone"
        android:textColor="@color/black"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_signIn_Username"
        app:layout_constraintVertical_bias="0.318" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="33dp"
        android:fontFamily="@font/nunito"
        android:text="@string/no_account"
        android:textColor="@color/black"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/signin_phonenum" />


    <TextView
        android:id="@+id/signUp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="36dp"
        android:clickable="true"
        android:focusable="true"
        android:fontFamily="@font/nunito"
        android:text="@string/signup"
        android:textColor="@color/text_color"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/textView2"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />


</androidx.constraintlayout.widget.ConstraintLayout>