<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/primary_color"

    android:padding="20sp"
    tools:context=".ProfileCompleteActivity">

    <TextView
        android:id="@+id/login_back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="5sp"
        android:clickable="true"
        android:focusable="true"
        android:fontFamily="@font/nunito"
        android:text="Back"
        android:textColor="@color/Button_color"
        android:textSize="18sp"
        android:textStyle="bold"
        app:drawableLeftCompat="@drawable/back"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.022" />

    <TextView
        android:id="@+id/TabName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/nunito"
        android:text="Profile"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.527"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.022" />


    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/profilePick"
        android:layout_width="180sp"
        android:layout_height="180sp"

       app:shapeAppearanceOverlay="@style/corner_test"
        app:strokeWidth="3sp"
        app:strokeColor="@color/text_color"
        android:src="@drawable/logo"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/TabName"
        app:layout_constraintVertical_bias="0.098" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/profilePicker"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/primary_color"
        android:elevation="10sp"
        android:clickable="true"
        android:focusable="true"
        android:contentDescription="@string/description_profile"
        app:layout_constraintBottom_toBottomOf="@+id/profilePick"
        app:layout_constraintEnd_toEndOf="@+id/profilePick"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/profilePick"
        app:layout_constraintTop_toTopOf="@+id/profilePick"
        app:layout_constraintVertical_bias="1.0"

        app:srcCompat="@drawable/edit" />


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/name"
        style="@style/textInputLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="41sp"
        android:hint="@string/Name"
        app:boxStrokeWidth="0sp"
        app:boxStrokeWidthFocused="0sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/profilePick"
        app:shapeAppearanceOverlay="@style/corner_test">


        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/userName_text"
            style="@style/textInputLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:boxStrokeWidth="0sp"
            tools:layout_editor_absoluteX="10dp"
            tools:layout_editor_absoluteY="231dp" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/status_pick"
        style="@style/dropdowninput"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="25sp"
        android:hint="@string/status"
        app:boxStrokeWidth="0sp"
        app:boxStrokeWidthFocused="0sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/name"
        app:shapeAppearanceOverlay="@style/corner_test">


        <AutoCompleteTextView
            android:id="@+id/status_autocomplete"

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="none"
            app:boxStrokeWidth="0sp"
            tools:layout_editor_absoluteX="10dp"
            tools:layout_editor_absoluteY="231dp" >
        </AutoCompleteTextView>
    </com.google.android.material.textfield.TextInputLayout>


<com.google.android.material.textfield.TextInputLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    style="@style/dropdowninput"
    android:layout_marginTop="25sp"
    android:hint="@string/Packageselect"
    app:startIconDrawable="@drawable/packages"

    app:boxStrokeWidth="0sp"
    app:boxStrokeWidthFocused="0sp"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/status_pick"
   >


    <AutoCompleteTextView
        android:id="@+id/package_autocomplete"
        style="@style/inputTextEdit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="none"
        android:layout_weight="1">

    </AutoCompleteTextView>




</com.google.android.material.textfield.TextInputLayout>



    <com.google.android.material.button.MaterialButton
        android:id="@+id/CompleteButton"
        style="@style/ButtonSignIn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/signupComplete"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>