<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/primary_color"
    android:padding="20sp"
    android:layout_gravity="center"
    tools:context=".PhoneLoginActivity">


    <TextView
        android:id="@+id/login_back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="5sp"
        android:clickable="true"
        android:focusable="true"
        android:fontFamily="@font/nunito"
        android:text="Back"
        android:textColor="@color/Button_color"
        android:textSize="18sp"
        android:textStyle="bold"
        app:drawableLeftCompat="@drawable/back"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="175dp"
        android:layout_height="30dp"
        android:layout_marginTop="104dp"

        android:src="@drawable/nex2it_"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="36dp"
        android:fontFamily="@font/nunito"
        android:text="@string/use_phone_signin"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:boxStrokeWidth="0sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView2" />



    <com.google.android.material.textfield.TextInputLayout




        android:id="@+id/Select_Phonenumber"

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="36sp"
        app:shapeAppearanceOverlay="@style/corner_test"
        app:boxStrokeWidth="0sp"
        app:boxStrokeWidthFocused="0sp"
        android:elevation="10sp"
        app:errorEnabled="true"
        app:errorIconDrawable="@drawable/ic_baseline_error_24"
        android:hint=" please enter the Phonenumber"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3">

        <com.hbb20.CountryCodePicker
            android:id="@+id/ccp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/roundedbtnshape"

            app:ccpDialog_keyboardAutoPopup="false"
            app:ccp_arrowColor="@color/black"
            app:ccp_arrowSize="16sp"
            app:ccp_autoDetectCountry="true"
            app:ccp_autoFormatNumber="true"
            app:ccp_showFlag="false"
            app:ccp_showFullName="false"
            app:ccp_showNameCode="false"
            app:ccp_textGravity="LEFT"
            app:ccp_textSize="14sp" />


        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/phonenumberInput"
            style="@style/textInputLayout"
            android:inputType="phone"
            android:elevation="10sp"
            android:autofillHints="phone"
            android:paddingStart="12sp"
            android:paddingEnd="12sp"
            app:boxStrokeWidth="0sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />




    </com.google.android.material.textfield.TextInputLayout>



    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_signin_phonenum"
        style="@style/ButtonSignIn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:text="@string/signin"
        app:elevation="10sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.4"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Select_Phonenumber"
        app:layout_constraintVertical_bias="0.0" />
    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="33dp"
        android:fontFamily="@font/nunito"
        android:text="@string/no_account"
        android:textColor="@color/black"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_signin_phonenum" />


    <TextView
        android:id="@+id/signUp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="36dp"
        android:fontFamily="@font/nunito"
        android:text="@string/signup"
        android:textColor="@color/text_color"
        android:textSize="14sp"
        android:textStyle="bold"
        android:clickable="true"
        app:layout_constraintEnd_toEndOf="@+id/textView2"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />


</androidx.constraintlayout.widget.ConstraintLayout>